Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@ title: Home
 
 <section class="section">
   <div class="hero">
-    <h1 class="hero__title">Welcome.</h1>
-    <p class="hero__name">I am <strong>Huseyn Huseynzada</strong>, a Mathematics student at ADA University.</p>
-    <div class="hero__content">
-      <p>
-        I am interested in the connection between mathematics, creativity, and modern technology. I enjoy reading, drawing, volunteering, leadership, and organizing meaningful work.
-      </p>
-      <p>
-        My goal is to grow as a mathematician, continue my studies at a top university, and contribute to research that connects mathematical thinking with creative ideas. I love understanding how ideas work, solving problems, teaching others, and creating things that have both structure and beauty.
-      </p>
-      <p>
-        This website is a place where I share my work, my interests, and the things I learn.
-      </p>
+    <div class="hero__image-wrapper">
+      <img src="{{ '/assets/images/profile.jpg' | relative_url }}" alt="Huseyn Huseynzada" class="hero__image">
+    </div>
+    <div class="hero__text">
+      <h1 class="hero__title">Welcome.</h1>
+      <p class="hero__name">I am <strong>Huseyn Huseynzada</strong>, a Mathematics student at ADA University.</p>
+      <div class="hero__content">
+        <p>
+          I am interested in the connection between mathematics, creativity, and modern technology. I enjoy reading, drawing, volunteering, leadership, and organizing meaningful work.
+        </p>
+        <p>
+          My goal is to grow as a mathematician, continue my studies at a top university, and contribute to research that connects mathematical thinking with creative ideas. I love understanding how ideas work, solving problems, teaching others, and creating things that have both structure and beauty.
+        </p>
+        <p>
+          This website is a place where I share my work, my interests, and the things I learn.
+        </p>
+      </div>
     </div>
   </div>
 </section>
