--- a/books.html
+++ b/books.html
@@ -8,55 +8,131 @@ title: Books
     <h1 class="section__title">Books I Have Read</h1>
   </header>
 
-  <div class="books__grid">
-    <article class="book-card">
-      <h2 class="book-card__title">How to Win Friends and Influence People in the Digital Age</h2>
-      <p class="book-card__author">Dale Carnegie</p>
-      <p class="book-card__status">Reading</p>
-      <p class="book-card__description">
-        A modern version of Carnegie's classic book that explains how to communicate effectively, build relationships, and create positive influence in online and offline environments. It focuses on empathy, clarity, listening, and ethical influence.
-      </p>
+  <div class="books-grid">
+    <article class="book-card card">
+      <div class="book-card__cover-wrapper">
+        <div class="book-card__cover">
+          <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+          </svg>
+        </div>
+      </div>
+      <div class="book-card__content">
+        <div class="book-card__header">
+          <h2 class="book-card__title">How to Win Friends and Influence People in the Digital Age</h2>
+          <span class="book-card__status book-card__status--reading">Reading</span>
+        </div>
+        <p class="book-card__author">Dale Carnegie</p>
+        <p class="book-card__description">
+          A modern version of Carnegie's classic book that explains how to communicate effectively, build relationships, and create positive influence in online and offline environments. It focuses on empathy, clarity, listening, and ethical influence.
+        </p>
+      </div>
     </article>
 
-    <article class="book-card">
-      <h2 class="book-card__title">The Opportunity Analysis Canvas</h2>
-      <p class="book-card__author">James V. Green</p>
-      <p class="book-card__description">
-        A structured guide used in entrepreneurship courses to understand opportunities, market needs, and personal strengths. It teaches how to analyze ideas, evaluate risks, and develop an entrepreneurial mindset.
-      </p>
+    <article class="book-card card">
+      <div class="book-card__cover-wrapper">
+        <div class="book-card__cover">
+          <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+          </svg>
+        </div>
+      </div>
+      <div class="book-card__content">
+        <div class="book-card__header">
+          <h2 class="book-card__title">The Opportunity Analysis Canvas</h2>
+          <span class="book-card__status book-card__status--completed">Completed</span>
+        </div>
+        <p class="book-card__author">James V. Green</p>
+        <p class="book-card__description">
+          A structured guide used in entrepreneurship courses to understand opportunities, market needs, and personal strengths. It teaches how to analyze ideas, evaluate risks, and develop an entrepreneurial mindset.
+        </p>
+      </div>
     </article>
 
-    <article class="book-card">
-      <h2 class="book-card__title">The ONE Thing</h2>
-      <p class="book-card__author">Gary Keller</p>
-      <p class="book-card__description">
-        A self development book that explains how focusing on the most important task brings clarity, reduces stress, and improves results. It teaches prioritization, productivity, and the value of disciplined focus.
-      </p>
+    <article class="book-card card">
+      <div class="book-card__cover-wrapper">
+        <div class="book-card__cover">
+          <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+          </svg>
+        </div>
+      </div>
+      <div class="book-card__content">
+        <div class="book-card__header">
+          <h2 class="book-card__title">The ONE Thing</h2>
+          <span class="book-card__status book-card__status--completed">Completed</span>
+        </div>
+        <p class="book-card__author">Gary Keller</p>
+        <p class="book-card__description">
+          A self development book that explains how focusing on the most important task brings clarity, reduces stress, and improves results. It teaches prioritization, productivity, and the value of disciplined focus.
+        </p>
+      </div>
     </article>
 
-    <article class="book-card">
-      <h2 class="book-card__title">Animal Farm</h2>
-      <p class="book-card__author">George Orwell</p>
-      <p class="book-card__description">
-        A political allegory that uses simple storytelling to explore themes of power, control, and leadership. It teaches critical thinking and encourages readers to question systems and authority.
-      </p>
+    <article class="book-card card">
+      <div class="book-card__cover-wrapper">
+        <div class="book-card__cover">
+          <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+          </svg>
+        </div>
+      </div>
+      <div class="book-card__content">
+        <div class="book-card__header">
+          <h2 class="book-card__title">Animal Farm</h2>
+          <span class="book-card__status book-card__status--completed">Completed</span>
+        </div>
+        <p class="book-card__author">George Orwell</p>
+        <p class="book-card__description">
+          A political allegory that uses simple storytelling to explore themes of power, control, and leadership. It teaches critical thinking and encourages readers to question systems and authority.
+        </p>
+      </div>
     </article>
 
-    <article class="book-card">
-      <h2 class="book-card__title">Harry Potter Series</h2>
-      <p class="book-card__author">J. K. Rowling</p>
-      <p class="book-card__description">
-        A fantasy series about friendship, courage, personal growth, and the power of choices. It offers imagination and emotional depth and is one of the most influential modern literary works.
-      </p>
+    <article class="book-card card">
+      <div class="book-card__cover-wrapper">
+        <div class="book-card__cover">
+          <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+          </svg>
+        </div>
+      </div>
+      <div class="book-card__content">
+        <div class="book-card__header">
+          <h2 class="book-card__title">Harry Potter Series</h2>
+          <span class="book-card__status book-card__status--completed">Completed</span>
+        </div>
+        <p class="book-card__author">J. K. Rowling</p>
+        <p class="book-card__description">
+          A fantasy series about friendship, courage, personal growth, and the power of choices. It offers imagination and emotional depth and is one of the most influential modern literary works.
+        </p>
+      </div>
     </article>
 
-    <article class="book-card">
-      <h2 class="book-card__title">The 48 Laws of Power</h2>
-      <p class="book-card__author">Robert Greene</p>
-      <p class="book-card__description">
-        A book that analyzes patterns of power, influence, and strategy throughout history. It introduces psychological insights and strategic thinking, often used in leadership and negotiation studies.
-      </p>
+    <article class="book-card card">
+      <div class="book-card__cover-wrapper">
+        <div class="book-card__cover">
+          <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+          </svg>
+        </div>
+      </div>
+      <div class="book-card__content">
+        <div class="book-card__header">
+          <h2 class="book-card__title">The 48 Laws of Power</h2>
+          <span class="book-card__status book-card__status--completed">Completed</span>
+        </div>
+        <p class="book-card__author">Robert Greene</p>
+        <p class="book-card__description">
+          A book that analyzes patterns of power, influence, and strategy throughout history. It introduces psychological insights and strategic thinking, often used in leadership and negotiation studies.
+        </p>
+      </div>
     </article>
   </div>
 </section>
-
